# earth-civilization-simulator

./: .gitignore  ARCHITECTURE_RULES.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  SCALING_IMPLEMENTATION.md  pyproject.toml
backend/: README.md  __init__.py
backend/api/: README.md  __init__.py
backend/app/: README.md  __init__.py  bootstrap.py  main.py
backend/commands/: README.md  __init__.py
backend/economy/: README.md  __init__.py
backend/history/: README.md  __init__.py
backend/ideologies/: README.md  __init__.py
backend/knowledge/: README.md  __init__.py
backend/llm/: README.md  __init__.py  rate_limiter.py
backend/localization/: README.md  __init__.py
backend/money/: README.md  __init__.py
backend/npc/: README.md  __init__.py
backend/observability/: README.md  __init__.py
backend/observability/metrics/: collector.py
backend/persistence/: README.md  __init__.py  base.py
backend/persistence/cache/: redis_adapter.py
backend/persistence/postgres/: adapter.py  pool.py
backend/shared/: README.md  __init__.py  architecture.py  base_engine.py  batch_processor.py  constants.py  import_validator.py  interfaces.py  resource_limits.py  task_queue.py  time.py  types.py
backend/simulation-engine/: README.md  event_bus.py  state.py  tick.py
backend/simulation_engine/: README.md  __init__.py  determinism.py  orchestrator.py  state.py  tick.py
backend/systems/: __init__.py
backend/systems/model_router/: __init__.py
backend/systems/pipelines/: __init__.py
backend/systems/safety/: __init__.py
backend/systems/telemetry/: __init__.py
backend/timeline/: README.md  __init__.py
backend/world_generation/: README.md  __init__.py
configs/: README.md  dev.yaml  engine-order.yaml  model-routing.yaml  prod.yaml  secrets.template.yaml
data/: README.md
docs/: EXTENSION_SETUP.md  PHASE_0.md  PHASE_MODEL.md  README.md
docs/architecture/: CURRENT_ARCHITECTURE.md  README.md  architecture.md
docs/implementation/: README.md  scaling.md  status.md
game-client-minecraft/: README.md
scripts/: README.md  rebuild_world_cache.sh  run_backend.sh  run_minecraft_server.sh  setup_database.sh  test_tick.py  validate_architecture.py
src/engines/: README.md
src/platform/: README.md
src/simulation/: README.md
tests/: README.md
tools/: README.md  headless_realism_harness.py
